--- a/UCT-Form.css
+++ b/UCT-Form.css
@@ -2,8 +2,12 @@
 /* CSS Document */
 
 body {
-	padding-bottom: 30px;
-	padding-top: 30px;
+	/*padding-bottom: 30px;*/
+	/*padding-top: 30px;*/
+	display: flex;
+  	flex-direction: column;
+  	align-items: center;
+  	justify-content: center;
 	background-color: #04243a;
 	font: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
 }
