--- a/UCT-Form.css
+++ b/UCT-Form.css
@@ -42,6 +42,11 @@ input[type=text]:focus {
 	padding-top: 10px;
 	background-color: rgba(255, 255, 255, 0.91);
 	border-radius: 25px;
+	
+	display: flex;
+  	flex-direction: column;
+  	align-items: center;
+  	justify-content: center;
 }
 
 
