--- a/UCT-Form.css
+++ b/UCT-Form.css
@@ -2,12 +2,8 @@
 /* CSS Document */
 
 body {
-	/*padding-bottom: 30px;*/
-	/*padding-top: 30px;*/
-	display: flex;
-  	flex-direction: column;
-  	align-items: center;
-  	justify-content: center;
+	padding-bottom: 30px;
+	padding-top: 30px;
 	background-color: #04243a;
 	font: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
 }
@@ -42,11 +38,6 @@ input[type=text]:focus {
 	padding-top: 10px;
 	background-color: rgba(255, 255, 255, 0.91);
 	border-radius: 25px;
-	
-	display: flex;
-  	flex-direction: column;
-  	align-items: center;
-  	justify-content: center;
 }
 
 
